# GrabCut

./: CMakeLists.txt  OpenCVTest.cpp  README.md  main.cpp  tempTest.cpp  演示ppt.pptx
include/cut_alg/: Pixel.h
max_flow/: CMakeLists.txt
output/: output.txt
src/: CMakeLists.txt  GrabCutter.cpp  main.cpp
src/cut_alg/: CMakeLists.txt  GMM.cpp  GMMComponent.cpp  Pixel.cpp  RGB.cpp
src/include/: GrabCutter.h  common.h
src/include/cut_alg/: GMM.h  GMMComponent.h  Pixel.h  PixelBelongEnum.h  RGB.h
src/include/ui/: UIController.h
src/include/util/: ImageOutputer.h  MathUtil.h  OutputSwitcher.h
src/max_flow/: CMakeLists.txt  MaxFlowTest.cpp
src/ui/: CMakeLists.txt  OpenCVTest.cpp  UIController.cpp
src/util/: CMakeLists.txt  ImageOutputer.cpp  MathUtil.cpp  OutputSwitcher.cpp
